fixed heading1 scrollbar

--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -26,6 +26,13 @@ ul.uk-nav-sub {
     padding-left: $spacing-unit;
     padding-right: $spacing-unit;
     color: $brand-color;
+
+    @include media-query($on-mobile) {
+      margin-left: -5px;
+    margin-right: -5px;
+    padding-left: 5px;
+    padding-right: 5px;
+    }
   }
 
   h1:not(:first-child) {
